<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".VentanaQueEsValorant">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@drawable/fondot"
        android:scaleType="fitXY"
        android:cropToPadding="true"
        android:contentDescription="@string/descripcion" />

    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:ignore="MissingConstraints,UselessParent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp">
            <View
                android:layout_width="match_parent"
                android:layout_height="70dp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textStyle="bold"
                android:textSize="24sp"
                android:textColor="@color/darkRed"
                android:text="@string/queesvalorant_1"/>
            <View
                android:layout_width="match_parent"
                android:layout_height="10dp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textStyle="bold"
                android:textSize="18sp"
                android:text="@string/queesvalorant_2"
                android:textColor="@color/colorPrimaryDark"
                />
            <View
                android:layout_width="match_parent"
                android:layout_height="20dp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textStyle="bold"
                android:textSize="18sp"
                android:text="@string/queesvalorant_3"
                android:textColor="@color/colorPrimaryDark"
                />
            <View
                android:layout_width="match_parent"
                android:layout_height="20dp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textStyle="bold"
                android:textSize="18sp"
                android:text="@string/queesvalorant_4"
                android:textColor="@color/colorPrimaryDark"
                />
            <View
                android:layout_width="match_parent"
                android:layout_height="20dp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textStyle="bold"
                android:textSize="18sp"
                android:text="@string/queesvalorant_5"
                android:textColor="@color/colorPrimaryDark"
                />
            <View
                android:layout_width="match_parent"
                android:layout_height="20dp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textStyle="bold"
                android:textSize="18sp"
                android:text="@string/queesvalorant_6"
                android:textColor="@color/colorPrimaryDark"
                />
            <View
                android:layout_width="match_parent"
                android:layout_height="20dp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textStyle="bold"
                android:textSize="18sp"
                android:text="@string/queesvalorant_7"
                android:textColor="@color/colorPrimaryDark"
                />
            <View
                android:layout_width="match_parent"
                android:layout_height="20dp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textStyle="bold"
                android:textSize="18sp"
                android:text="@string/queesvalorant_8"
                android:textColor="@color/colorPrimaryDark"
                />
            <View
                android:layout_width="match_parent"
                android:layout_height="20dp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textStyle="bold"
                android:textSize="18sp"
                android:text="@string/queesvalorant_9"
                android:textColor="@color/colorPrimaryDark"
                />
            <View
                android:layout_width="match_parent"
                android:layout_height="20dp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textStyle="bold"
                android:textSize="18sp"
                android:text="@string/queesvalorant_10"
                android:textColor="@color/colorPrimaryDark"
                />
            <View
                android:layout_width="match_parent"
                android:layout_height="20dp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textStyle="bold"
                android:textSize="18sp"
                android:text="@string/queesvalorant_11"
                android:textColor="@color/colorPrimaryDark"
                />
            <View
                android:layout_width="match_parent"
                android:layout_height="20dp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textStyle="bold"
                android:textSize="18sp"
                android:text="@string/queesvalorant_12"
                android:textColor="@color/colorPrimaryDark"
                />
            <View
                android:layout_width="match_parent"
                android:layout_height="20dp"/>
            <TextView
                android:id="@+id/queEsValorant_link"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textStyle="bold"
                android:textSize="18sp"
                android:text="@string/queesvalorant_13"
                android:textColor="@color/darkLinkBlue"
                />
            <View
                android:layout_width="match_parent"
                android:layout_height="20dp"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <Button
                    android:id="@+id/queEsValorant_ee1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:visibility="invisible"
                    android:text="@string/volver"/>
                <Button
                    android:id="@+id/queEsValorant_volver"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/volver"/>
                <Button
                    android:id="@+id/queEsValorant_ee2"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:visibility="invisible"
                    android:text="@string/volver"/>

            </LinearLayout>
            <View
                android:layout_width="match_parent"
                android:layout_height="60dp"/>
        </LinearLayout>
    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>