<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FragmentosMapas.BindFragment"
    android:background="@drawable/fondot_blue">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:ignore="MissingConstraints,UselessParent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >

            <View
                android:layout_width="match_parent"
                android:layout_height="60dp"
                />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                >

                <TextView
                    android:id="@+id/textView4"
                    android:textSize="12sp"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:paddingStart="10dp"
                    android:layout_weight="1"
                    android:text="@string/anterior_mapa_split"
                    tools:ignore="RtlSymmetry" />

                <TextView
                    android:id="@+id/textView3"
                    android:textSize="12sp"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/desliza_con_el_dedo_3" />

                <TextView
                    android:id="@+id/bind_tv_volver"
                    android:textSize="12sp"
                    android:layout_width="0dp"
                    android:textColor="@color/smoothDarkBlue"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textStyle="bold"
                    android:paddingEnd="10dp"
                    android:gravity="end"
                    android:text="@string/volver_al_menu_2"
                    tools:ignore="RtlSymmetry" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="20dp"
                />

            <TextView
                android:id="@+id/bind_titulo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/valorant"
                android:gravity="center|center_horizontal"
                android:text="@string/bind"

                android:textColor="@color/colorPrimary"
                android:textSize="40sp" />

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="160dp"
                android:src="@drawable/valorant_mapas_bind"
                android:contentDescription="@string/imagenmapabind" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/colorPrimary"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:text="@string/bind_desc_1"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="20dp"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/colorPrimary"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:text="@string/bind_desc_2"
                android:textStyle="bold"/>

            <ImageView
                android:id="@+id/bind_minimapa"
                android:layout_width="match_parent"
                android:layout_height="450dp"
                android:contentDescription="@string/imagenmapabind"
                android:src="@drawable/valorant_mapas_minimapas_bind" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <View
                    android:layout_width="200dp"
                    android:layout_height="20dp"
                    />
                <CheckBox
                    android:id="@+id/bind_checkBox_defensores"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:buttonTint="@color/colorPrimary"
                    android:text="@string/bind_vista_defensores"
                    android:textColor="@color/colorPrimary"
                    />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="20dp"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/colorPrimary"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:text="@string/bind_desc_3"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="20dp"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/colorPrimary"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:text="@string/bind_desc_4"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="20dp"
                />

            <TextView
                android:id="@+id/bind_egg_1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/colorPrimary"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:text="@string/bind_desc_5"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="20dp"
                />

        </LinearLayout>
    </ScrollView>

</FrameLayout>