<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FragmentosMapas.SplitFragment"
    android:background="@drawable/fondot_orange">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:ignore="MissingConstraints,UselessParent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >

            <View
                android:layout_width="match_parent"
                android:layout_height="60dp"
                />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                >

                <TextView
                    android:id="@+id/textView4"
                    android:textSize="12sp"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:paddingStart="10dp"
                    android:layout_weight="1"
                    android:text="@string/anterior_mapa_haven"
                    tools:ignore="RtlSymmetry" />

                <TextView
                    android:id="@+id/textView3"
                    android:textSize="12sp"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/desliza_con_el_dedo_2" />

                <TextView
                    android:id="@+id/textView2"
                    android:textSize="12sp"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:paddingEnd="10dp"
                    android:layout_weight="1"
                    android:gravity="end"
                    android:text="@string/siguiente_mapa_bind"
                    tools:ignore="RtlSymmetry" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="20dp"
                />

            <TextView
                android:id="@+id/split_titulo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/valorant"
                android:gravity="center|center_horizontal"
                android:text="@string/split"

                android:textColor="@color/colorPrimary"
                android:textSize="40sp" />

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="160dp"
                android:src="@drawable/valorant_mapas_split"
                android:contentDescription="@string/imagenmapasplit" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/colorPrimary"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:text="@string/split_desc_1"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="20dp"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/colorPrimary"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:text="@string/split_desc_2"
                android:textStyle="bold"/>

            <ImageView
                android:id="@+id/split_minimapa"
                android:layout_width="match_parent"
                android:layout_height="450dp"
                android:contentDescription="@string/imagenmapasplit"
                android:src="@drawable/valorant_mapas_minimapas_split" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <View
                    android:layout_width="200dp"
                    android:layout_height="20dp"
                    />
                <CheckBox
                    android:id="@+id/split_checkBox_defensores"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:buttonTint="@color/colorPrimary"
                    android:text="@string/split_vista_defensores"
                    android:textColor="@color/colorPrimary"
                    />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="20dp"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/colorPrimary"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:text="@string/split_desc_3"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="20dp"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/colorPrimary"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:text="@string/split_desc_4"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="20dp"
                />

        </LinearLayout>
    </ScrollView>

</LinearLayout>